// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-react > eslint-react 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react --js-plugins > eslint-react--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "jsPlugins": [
          "eslint-plugin-react-x",
          "eslint-plugin-react-rsc",
          "eslint-plugin-react-dom",
          "eslint-plugin-react-web-api",
          "eslint-plugin-react-hooks-extra",
          "eslint-plugin-react-naming-convention",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "@eslint-react/dom/no-dangerously-set-innerhtml": "warn",
          "@eslint-react/dom/no-dangerously-set-innerhtml-with-children": "error",
          "@eslint-react/dom/no-find-dom-node": "error",
          "@eslint-react/dom/no-flush-sync": "error",
          "@eslint-react/dom/no-hydrate": "error",
          "@eslint-react/dom/no-namespace": "error",
          "@eslint-react/dom/no-render": "error",
          "@eslint-react/dom/no-render-return-value": "error",
          "@eslint-react/dom/no-script-url": "warn",
          "@eslint-react/dom/no-unsafe-iframe-sandbox": "warn",
          "@eslint-react/dom/no-use-form-state": "error",
          "@eslint-react/dom/no-void-elements-with-children": "error",
          "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect": "warn",
          "@eslint-react/jsx-key-before-spread": "warn",
          "@eslint-react/jsx-no-comment-textnodes": "warn",
          "@eslint-react/jsx-no-duplicate-props": "warn",
          "@eslint-react/jsx-uses-react": "warn",
          "@eslint-react/jsx-uses-vars": "warn",
          "@eslint-react/naming-convention/context-name": "warn",
          "@eslint-react/naming-convention/id-name": "warn",
          "@eslint-react/naming-convention/ref-name": "warn",
          "@eslint-react/naming-convention/use-state": "warn",
          "@eslint-react/no-access-state-in-setstate": "error",
          "@eslint-react/no-array-index-key": "warn",
          "@eslint-react/no-children-count": "warn",
          "@eslint-react/no-children-for-each": "warn",
          "@eslint-react/no-children-map": "warn",
          "@eslint-react/no-children-only": "warn",
          "@eslint-react/no-children-to-array": "warn",
          "@eslint-react/no-clone-element": "warn",
          "@eslint-react/no-component-will-mount": "error",
          "@eslint-react/no-component-will-receive-props": "error",
          "@eslint-react/no-component-will-update": "error",
          "@eslint-react/no-context-provider": "warn",
          "@eslint-react/no-create-ref": "error",
          "@eslint-react/no-default-props": "error",
          "@eslint-react/no-direct-mutation-state": "error",
          "@eslint-react/no-forward-ref": "warn",
          "@eslint-react/no-missing-key": "error",
          "@eslint-react/no-nested-component-definitions": "error",
          "@eslint-react/no-nested-lazy-component-declarations": "error",
          "@eslint-react/no-prop-types": "error",
          "@eslint-react/no-redundant-should-component-update": "error",
          "@eslint-react/no-set-state-in-component-did-mount": "warn",
          "@eslint-react/no-set-state-in-component-did-update": "warn",
          "@eslint-react/no-set-state-in-component-will-update": "warn",
          "@eslint-react/no-string-refs": "error",
          "@eslint-react/no-unnecessary-use-prefix": "warn",
          "@eslint-react/no-unsafe-component-will-mount": "warn",
          "@eslint-react/no-unsafe-component-will-receive-props": "warn",
          "@eslint-react/no-unsafe-component-will-update": "warn",
          "@eslint-react/no-unused-class-component-members": "warn",
          "@eslint-react/no-use-context": "warn",
          "@eslint-react/no-useless-forward-ref": "warn",
          "@eslint-react/prefer-use-state-lazy-initialization": "warn",
          "@eslint-react/rsc/function-definition": "error",
          "@eslint-react/web-api/no-leaked-event-listener": "warn",
          "@eslint-react/web-api/no-leaked-interval": "warn",
          "@eslint-react/web-api/no-leaked-resize-observer": "warn",
          "@eslint-react/web-api/no-leaked-timeout": "warn",
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react --type-aware > eslint-react--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react merge > eslint-react--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;
